--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <script>
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-6273751-7']);
+    _gaq.push(['_setAccount', 'UA-35636115']);
     _gaq.push(['_trackPageview']);
 
     (function() {
