--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -1,19 +1,19 @@
 ﻿<!doctype html>
 
 <head>
-	<title>Hi, I&#8217;m Alex.</title>
+	<titleDemo</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="shortcut icon" href="./images/favicon.png" />
-	<meta name="copyright" content="Copyright by Alex Cican. 2013" />
+	<meta name="copyright" content="Copyright2013" />
 	<meta name="robots" content="noindex, nofollow" />
-  <meta name="author" content="https://plus.google.com/116801469202683881648/" />
+  <meta name="author" content="https://plus.google.com/101581194392880354782/" />
   <meta property="og:title" content="Parallax Scrolling" />
   <meta property="og:description" content="Demo website showcasing a responsive parallax effect." />
-  <meta property="og:image" content="http://farm9.staticflickr.com/8354/8428703841_b60a2026d5_o.jpg" />
+  <meta property="og:image" content="https://db.tt/6yPCdASI" />
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@alexcican">
-  <meta name="twitter:creator" content="@alexcican">
-  <meta name="twitter:url" content="http://lab.alexcican.com/scrollr/">
+  <meta name="twitter:site" content="@artizennerd">
+  <meta name="twitter:creator" content="@artizennerd">
+  <meta name="twitter:url" content="http://lab.artizendigital.com/scrollr/">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="./style/style.css" />
 </head>
