--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 
 <head>
-	<titleDemo</title>
+	<title></title>Demo</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="shortcut icon" href="./images/favicon.png" />
 	<meta name="copyright" content="Copyright2013" />
@@ -40,8 +40,8 @@
 		</div><!--end div_content-->
 
 		<footer>
-			<p><a href="#" title="Back to Top">Back to Top</a> &bull; <a href="mailto:alex@sicanstudios.com?&subject=Hi%20Alex" title="Get in Touch">Get in Touch</a><br/>
-				Made by<span> the hand of</span> <a href="http://twitter.com/alexcican" target="_blank" title="Alex Cican on Twitter">Alex Cican</a>. Source code on <a href="http://github.com/alexcican/lab/tree/gh-pages/scrollr" target="_blank" title="Source code on GitHub">GitHub</a>.<br/>
+			<p><a href="#" title="Back to Top">Back to Top</a> &bull; <a href="mailto:ddaniels@artizenstudios.com?&subject=Hi%20Damon" title="Get in Touch">Get in Touch</a><br/>
+				Made by<span> the hand of</span> <a href="http://twitter.com/artizennerd" target="_blank" title="Artizen Nerd on Twitter">Artizen Nerd</a>.<br/>
 			</p>
 		</footer>
 	</div><!--end div_container-->
