--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 
 <head>
-	<title></title>Demo</title>
+	<title>Demo</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="shortcut icon" href="./images/favicon.png" />
 	<meta name="copyright" content="Copyright2013" />
@@ -9,7 +9,7 @@
   <meta name="author" content="https://plus.google.com/101581194392880354782/" />
   <meta property="og:title" content="Parallax Scrolling" />
   <meta property="og:description" content="Demo website showcasing a responsive parallax effect." />
-  <meta property="og:image" content="https://db.tt/6yPCdASI" />
+  <meta property="og:image" content="https://dl.dropboxusercontent.com/u/83228040/NKIR_001747_Fasion_RIP_9x12_La.jpg" />
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@artizennerd">
   <meta name="twitter:creator" content="@artizennerd">
