--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="https://plus.google.com/101581194392880354782/" />
   <meta property="og:title" content="Parallax Scrolling" />
   <meta property="og:description" content="Demo website showcasing a responsive parallax effect." />
-  <meta property="og:image" content="https://dl.dropboxusercontent.com/u/83228040/NKIR_001747_Fasion_RIP_9x12_La.jpg" />
+  <meta content="https://www.facebook.com/121049981238759/photos/a.161118593898564.40206.121049981238759/135945213082569/?type=1&source=11" property="og:image" />
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@artizennerd">
   <meta name="twitter:creator" content="@artizennerd">
