--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -24,7 +24,7 @@
 
 	<div id="home-slides">
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data="opacity: 1" data-top-bottom="opacity: 0">Scrolling <span>all day</span>, like&#8230;</p>
+			<p data="opacity: 1" data-top-bottom="opacity: 0">Scrolling <span>Cookie Lee</span>, like&#8230;</p>
 		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
 			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>tommorrow!</span></p>
