--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -24,10 +24,10 @@
 
 	<div id="home-slides">
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data="opacity: 1" data-top-bottom="opacity: 0"><span style="color: #040404">SHOP</span> <span>Cookie Lee</span>, like;</p>
+			<p data="opacity: 1" data-top-bottom="opacity: 0">Scrolling <span>all day</span>, like&#8230;</p>
 		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">there's no<span>tommorrow!</span></p>
+			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>tommorrow!</span></p>
 		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
 			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">Or <span>yesterday</span> for that matter!</span></p>
