--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -27,7 +27,7 @@
 			<p data="opacity: 1" data-top-bottom="opacity: 0">Shopping <span>all day</span>, like&#8230;</p>
 		<img src="images/large/cover_foreground.jpg" alt=""/>		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>tommorrow!</span></p>
+			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>today!</span></p>
 		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
 			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">Or <span>yesterday</span> for that matter!</span></p>
