--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -30,10 +30,10 @@
 			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>today!</span></p>
 		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">Also get <span>yesterday</span> Marketing Materials!</span></p>
+			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;Also&#8217; <span>Marketing Materials!</span></p>
 		</div>
 	</div>
-
+	
 	<div id="container">
 		<div id="content">
 
