--- a/scrollr/index.html
+++ b/scrollr/index.html
@@ -24,13 +24,13 @@
 
 	<div id="home-slides">
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data="opacity: 1" data-top-bottom="opacity: 0">Shopping <span>all day</span>, like&#8230;</p>
+			<p data="opacity: 1" data-top-bottom="opacity: 0">Shopping all DAY like&#8230;</p>
 		<img src="images/large/cover_foreground.jpg" alt=""/>		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>today!</span></p>
+			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;there&#8217;s no <span>tommorow!</span></p>
 		</div>
 		<div data-bottom-top="background-position: 50% 170px;" data-top-bottom="background-position: 50% -170px;">
-			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0">&#8230;Also&#8217; <span>Marketing Materials!</span></p>
+			<p data-bottom-top="opacity: 0" data-center-bottom="opacity: 1" data-top-bottom="opacity: 0"><span>Also Marketing Materials!</span></p>
 		</div>
 	</div>
 	
