--- a/card_flip/index.html
+++ b/card_flip/index.html
@@ -3,50 +3,44 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="shortcut icon" href="favicon.png" />
-  <title>Card Flip CSS3 &amp; HTML5 experiment</title>
-  <meta name="description" content="Card Flip CSS3 &amp; HTML5 experiment">
-  <meta name="author" content="https://plus.google.com/116801469202683881648/" />
-  <meta property="og:title" content="Card Flip CSS3 &amp; HTML5 experiment" />
-  <meta property="og:description" content="Demo website showcasing a cool 3D card flip." />
+  <title>ECard Demo</title>
+  <meta name="description" content="ECard Demo">
+  <meta name="author" content="https://plus.google.com/101581194392880354782/" />
+  <meta property="og:title" content="ECard Demo" />
+  <meta property="og:description" content="ECard Demo" />
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@alexcican">
-  <meta name="twitter:creator" content="@alexcican">
-  <meta name="twitter:url" content="http://lab.alexcican.com/card_flip/">
+  <meta name="twitter:site" content="@artizennerd">
+  <meta name="twitter:creator" content="@artizennerd">
+  <meta name="twitter:url" content="http://lab.artizendigital.com/card_flip/">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-	<p class="logo">Connecting the real world <br/><a href="#"> <img src="logo.png" alt="scan logo" /></a> <br/>with the digital universe.</p>
+	<p class="logo">Host a Trunk Show! <br/><a href="#"> <img src="sd_logo-color.svg" alt="S & D" /></a> <br/>Filled with friends and fashion!</p>
 	<div>
 		<section class="front side">
-			<img src="maiden.jpg" alt="maiden provo" />
-			<h1>Maiden Provo</h1>
-			<h2>Lead Coffee Maker <a href="http://twitter.com/alexcican" title="Sican Inc.">@alexcican</a>. Studied plants. Lived in Antarctica. Fell in love with penguins.</h2>
+		  <img src="midsum_front.png" alt=">##FirstName## ##LastName##"/>
+           <div class="clickable" position="relative; z-index:10;resize:none;"><textarea style="position: relative; color: #0C0608; -moz-transform-origin: sOrigin; -ms-transform-origin: sOrigin; -o-transform-origin::sOrigin;-webkit-transform-origin: sOrigin; transform-origin: sOrigin; -moz-transform: sTransform; -ms-transform: sTransform; -o-transform: sTransform; -webkit-transform : sTransform; transform: sTransform; padding: 0; padding-top: 0px; margin: 0; border: none; border-color: #0C0608; resize: none; overflow: hidden; outline: 0px !important; -webkit-appearance: none; -webkit-box-shadow: none; box-shadow: none; -webkit-transition: none; text-align: center; transition: none; line-height: 12px; font-style: normal; font-weight: normal; font-variant: normal; font-family: Eau-SansBookOsF; font-size: 12px; padding-bottom: 0px; z-index: 10; visibility: inherit;" class="front" id="editable_text_body_text" rows="8" wrap=""></textarea></div>
+			<h1>##FirstName##</h1>
+			<h2>StellaDot Stylist <a href="http://twitter.com/##TwiiterAccount##" title="STELLA DOT">##TwiiterAccount##</a>. Hello, dream job! .</h2>
 			<p class="rotate_button"></p>
-		</section>
+	  </section>
 
 		<section class="back side">
-			<img src="qrcode.png" alt="maiden provo qr code" />
-			<a href="mailto:maiden@provo.com" title="Email Maiden Provo">Email Maiden Provo</a>
+			<img src="midsum_back.png" alt="mid summer back" />
+			<a href="mailto:##emaiL##" title="Email ##FirstName## ##LastName##">Email ##FirstName## ##LastName##</a>
 			<section class="half">
-				<a href="http://alexcican.com" title="About Maiden Provo">About</a>
-				<a href="http://alexcican.com" title="Blog of Maiden Provo">Blog</a>
+				<a href="http://stelladot.com" title="##FirstName## ##LastName##">About</a>
 			</section>
 			<section class="third">
-				<a href="http://facebook.com" title="Maiden Provo on Facebook">Facebook</a>
-				<a href="http://instagr.am" title="Maiden Provo on Instagram">Instagram</a>
-				<a href="http://pinterest.com" title="Maiden Provo on Pinterest">Pinterest</a>
+				<a href="http://facebook.com" title="##FirstName## ##LastName## on Facebook">Facebook</a>
+				<a href="http://instagr.am" title="##FirstName## ##LastName## on Instagram">Instagram</a>
+				<a href="http://pinterest.com" title="##FirstName## ##LastName## on Pinterest">Pinterest</a>
 			</section>
 			<p class="rotate_button"></p>
 		</section>
 	</div>
-
-	<footer>
-	  <a href="https://twitter.com/share" class="twitter-share-button" data-via="alexcican" data-related="alexcican">Tweet</a>
-	  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> &bull; Created by <a href="http://twitter.com/alexcican" target="_blank" title="Alex Cican on Twitter">Alex Cican</a> &bull; Source code on <a href="http://github.com/alexcican/lab/tree/gh-pages/card_flip" target="_blank" title="GitHub">GitHub</a>
-	</footer>
-
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script type="text/javascript">
     /* iOS re-orientation fix */
