--- a/card_flip/index.html
+++ b/card_flip/index.html
@@ -20,8 +20,23 @@
 	<p class="logo">Host a Trunk Show! <br/><a href="#"> <img src="sd_logo-color.svg" alt="S & D" /></a> <br/>Filled with friends and fashion!</p>
 	<div>
 		<section class="front side">
-		  <img src="midsum_front.png" alt=">##FirstName## ##LastName##"/>
-			<h1>##FirstName##</h1>
+         <form class="form" method="post" z-index="25" >
+<p>Your First Name:<br />
+<input name="firstname" type="text" value="##firstname##" /></p>
+
+<p>Your Last Name:<br />
+<input name="lastname" type="text" value="##lastname##" /></p>
+
+<p>In what state do you live?<br />
+<input name="state" type="text" value="##state##" /></p>
+
+<p>email recipients:<br />
+<input name="email" type="text" value="##email##" /></p>
+
+<p><input type="submit" value="Send Email" /></p>
+</form>
+<img src="midsum_front.png" alt=">##FirstName## ##LastName##"/>
+         	<h1>##FirstName##</h1>
 			<h2>StellaDot Stylist <a href="http://twitter.com/##TwiiterAccount##" title="STELLA DOT">##TwiiterAccount##</a>. Hello, dream job! .</h2>
 			<p class="rotate_button"></p>
 	  </section>
