--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -53,15 +53,15 @@ We offer an array of printing services including digital, large-format, art repr
          </div>
 
             <!-- Pricing -->
-<div class="container">
- <div class="row">
+<div class="container" href="styles.css" rel="stylesheet" type="text/css">
+ <div class="row" href="styles.css" rel="stylesheet" type="text/css">
   <div class="col-md-4" href="styles.css" rel="stylesheet" type="text/css">
-  <div class="panel panel-danger">
+  <div class="panel panel-danger" href="styles.css" rel="stylesheet" type="text/css">
      <div class="panel-heading"><h3 class="text-center">Premium Canvas Prints</h3></div>
-         <div class="panel-body text-center">
-			<p class="lead" style="font-size:40px"><strong>$0.15 / Sq inch</strong></p>
+         <div class="panel-body text-center" href="styles.css" rel="stylesheet" type="text/css">
+			<p class="lead" href="styles.css" rel="stylesheet" type="text/css" style="font-size:40px"><strong>$0.15 / Sq inch</strong></p>
 		</div>
-                       <ul class="list-group list-group-flush text-center">
+                       <ul class="list-group list-group-flush text-center" href="styles.css" rel="stylesheet" type="text/css">
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40, 36x48</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Gallery Wraps Available</li>
