--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -134,11 +134,11 @@ We offer an array of printing services including digital, large-format, art repr
         
 
         <!-- Scripts -->
-        <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery.countdown.js"></script>
-        <script src="js/placeholders.min.js"></script>
-        <script src="js/flat-surface-shader.js"></script>
-        <script src="config/main.config.js"></script>
+        <script src="jquery-1.11.1.min.js"></script>
+        <script src="jquery.countdown.js"></script>
+        <script src="placeholders.min.js"></script>
+        <script src="flat-surface-shader.js"></script>
+        <script src="main.config.js"></script>
         <script src="shader.js"></script>
         <script src="scripts.js"></script>
     </body>
