--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -9,14 +9,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="shortcut icon">
+        <link href="favicon.ico" rel="shortcut icon">
 
         <!-- Custom fonts -->
         <link href="http://fonts.googleapis.com/css?family=Roboto:300,100" rel="stylesheet">
-        <link href="css/social-font.css" rel="stylesheet">
+        <link href="social-font.css" rel="stylesheet">
 
         <!-- Bootstrap stylesheets -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap.min.css" rel="stylesheet">
 
         <!-- Template stylesheets -->
         <link href="shader.css" rel="stylesheet" type="text/css">
