--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -110,20 +110,30 @@ We offer an array of printing services including digital, large-format, art repr
   </div>
             <!-- /Pricing -->
 
-            <div class="container">
-                <div class="row">
-                    <div class="form-and-links-container col-md-4">
+<div class="form-and-links-container col-sm-8 col-sm-offset-2">
                         <!-- Subscription form -->
                         <div class="row">
-                            <form class="subscription-form" id="subscription-form" novalidate>
-                                <div class="input-group">
-                                    <input type="email" class="subscription-form-email form-control" id="subscription-form-email" name="email" placeholder="Enter email to have someone contact you">
+                            <form class="subscription-form" id="subscription-form" novalidate="">
+                                <div class="input-group col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
+                                    <input type="email" class="subscription-form-email form-control" id="subscription-form-email" name="email" placeholder="Enter email to sign up for news">
                                     <span class="input-group-btn">
                                         <button class="subscription-form-submit btn" id="subscription-form-submit">Subscribe</button>
                                     </span>
                                 </div>
                             </form>
                         </div>
+                        <!-- /Subscription form -->
+
+                        <!-- Social links -->
+                        <div class="social-links">
+                            <a href="#" class="icon-facebook"></a>
+                            <a href="#" class="icon-twitter-alt"></a>
+                            <a href="#" class="icon-googleplus"></a>
+                            <a href="#" class="icon-youtube"></a>
+                            <a href="#" class="icon-github-alt"></a>
+                        </div>
+                        <!-- /Social links -->
+                    </div>
                         <!-- /Subscription form -->
                     </div>
                 </div>
