--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -113,11 +113,14 @@ We offer an array of printing services including digital, large-format, art repr
 <div class="form-and-links-container col-sm-8 col-sm-offset-2">
                         <!-- Subscription form -->
                         <div class="row">
-                            <form class="subscription-form" id="subscription-form" novalidate="">
+                            <form class="subscription-form" id="subscription-form" novalidate>
                                 <div class="input-group col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
-                                    <input type="email" class="subscription-form-email form-control" id="subscription-form-email" name="email" placeholder="Enter email to sign up for news">
+                                    <p>
+                                      <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news">
+                                      <span class="input-group-btn">
+                                      </span></p>
                                     <span class="input-group-btn">
-                                        <button class="subscription-form-submit btn" id="subscription-form-submit">Subscribe</button>
+                                    <button class="subscription-form-submit btn" id="subscription-form-submit">Submit</button>
                                     </span>
                                 </div>
                             </form>
