--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -21,8 +21,7 @@
         <!-- Template stylesheets -->
         <link href="shader.css" rel="stylesheet" type="text/css">
         <link href="styles.css" rel="stylesheet" type="text/css">
-
-        
+        <link href="form_styles.css" rel="stylesheet" type="text/css" media="screen">
     </head>
 
     <body class="theme-fire">
@@ -53,15 +52,15 @@ We offer an array of printing services including digital, large-format, art repr
          </div>
 
             <!-- Pricing -->
-<div class="container" href="styles.css" rel="stylesheet" type="text/css">
- <div class="row" href="styles.css" rel="stylesheet" type="text/css">
-  <div class="col-md-4" href="styles.css" rel="stylesheet" type="text/css">
-  <div class="panel panel-danger" href="styles.css" rel="stylesheet" type="text/css">
+<div class="container">
+ <div class="row">
+  <div class="col-md-4">
+  <div class="panel panel-danger">
      <div class="panel-heading"><h3 class="text-center">Premium Canvas Prints</h3></div>
-         <div class="panel-body text-center" href="styles.css" rel="stylesheet" type="text/css">
-			<p class="lead" href="styles.css" rel="stylesheet" type="text/css" style="font-size:40px"><strong>$0.15 / Sq inch</strong></p>
+         <div class="panel-body text-center">
+			<p class="lead" style="font-size:40px"><strong>$0.15 / Sq inch</strong></p>
 		</div>
-                       <ul class="list-group list-group-flush text-center" href="styles.css" rel="stylesheet" type="text/css">
+                       <ul class="list-group list-group-flush text-center">
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40, 36x48</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Gallery Wraps Available</li>
@@ -104,6 +103,7 @@ We offer an array of printing services including digital, large-format, art repr
 		<a class="btn btn-lg btn-block btn-danger" href="http://www.artizenfinearts.com">starting at $9.99!</a>
 	</div>
  </div>
+ 
 
     </div>
    </div>
@@ -127,17 +127,6 @@ We offer an array of printing services including digital, large-format, art repr
                         </div>
                         <!-- /Subscription form -->
 
-                        <!-- Social links -->
-                        <div class="social-links">
-                            <a href="#" class="icon-facebook"></a>
-                            <a href="#" class="icon-twitter-alt"></a>
-                            <a href="#" class="icon-googleplus"></a>
-                            <a href="#" class="icon-youtube"></a>
-                            <a href="#" class="icon-github-alt"></a>
-                        </div>
-                        <!-- /Social links -->
-                    </div>
-                        <!-- /Subscription form -->
                     </div>
                 </div>
             </div>
