--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -20,7 +20,6 @@
 
         <!-- Template stylesheets -->
         <link href="shader.css" rel="stylesheet" type="text/css">
-        <link href="styles.css" rel="stylesheet" type="text/css">
         <link href="form_styles.css" rel="stylesheet" type="text/css" media="screen">
     </head>
 
@@ -96,7 +95,7 @@ We offer an array of printing services including digital, large-format, art repr
 		</div>
                        <ul class="list-group list-group-flush text-center">
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
-							<li class="list-group-item"><i class="icon-ok text-danger"></i> 8x10, 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40,</li>
+							<li class="list-group-item"><i class="icon-ok text-danger"></i> <span style="font-size: xx-large"></span><span style="font-size: 20px"></span><span style="font-size: 20%"></span>8x10, 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40,</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Framing Available</li>
 						</ul>
     <div class="panel-footer">
@@ -116,12 +115,13 @@ We offer an array of printing services including digital, large-format, art repr
                             <form class="subscription-form" id="subscription-form" novalidate>
                                 <div class="input-group col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
                                     <p>
-                                      <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news">
+                                      <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news" size="200px">
                                       <span class="input-group-btn">
                                       </span></p>
                                     <span class="input-group-btn">
+                                    <a href="m">
                                     <button class="subscription-form-submit btn" id="subscription-form-submit">Submit</button>
-                                    </span>
+                                    </a>                                    </span>
                                 </div>
                             </form>
                         </div>
