--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -12,6 +12,8 @@
         <link href="favicon.ico" rel="shortcut icon">
 
         <!-- Custom fonts -->
+        <script type="text/javascript" src="//use.typekit.net/wph4bsa.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link href="http://fonts.googleapis.com/css?family=Roboto:300,100" rel="stylesheet">
         <link href="social-font.css" rel="stylesheet">
 
@@ -21,7 +23,8 @@
         <!-- Template stylesheets -->
         <link href="shader.css" rel="stylesheet" type="text/css">
         <link href="form_styles.css" rel="stylesheet" type="text/css" media="screen">
-    </head>
+    <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/poiret-one:n4:default.js" type="text/javascript"></script>
+</head>
 
     <body class="theme-fire">
         <!-- Background container -->
