--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -118,7 +118,7 @@ We offer an array of printing services including digital, large-format, art repr
                             <form class="subscription-form" id="subscription-form" novalidate>
                                 <div class="input-group col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
                                     <p>
-                                      <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news" size="200px">
+                                      <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news">
                                       <span class="input-group-btn">
                                       </span></p>
                                     <span class="input-group-btn">
