--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -112,11 +112,11 @@ We offer an array of printing services including digital, large-format, art repr
   </div>
             <!-- /Pricing -->
 
-<div class="form-and-links-container col-sm-8 col-sm-offset-2">
+<div class="form-and-links-container col-sm-8">
                         <!-- Subscription form -->
                         <div class="row">
                             <form class="subscription-form" id="subscription-form" novalidate>
-                                <div class="input-group col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
+                                <div class="input-group col-xs-12 col-xs-offset-1 col-sm-12 col-sm-offset-0">
                                     <p>
                                       <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news">
                                       <span class="input-group-btn">
