--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -90,7 +90,7 @@ We offer an array of printing services including digital, large-format, art repr
  </div>
 
   </div>
-   <div class="col-md-4" href="styles.css" rel="stylesheet" type="text/css">
+   <div class="col-md-4">
   <div class="panel panel-success">
     <div class="panel-heading"><h3 class="text-center">Photo Prints</h3></div>
          <div class="panel-body text-center">
