--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -90,7 +90,7 @@ We offer an array of printing services including digital, large-format, art repr
  </div>
 
   </div>
-   <div class="col-md-4">
+   <div class="col-md-4" href="styles.css" rel="stylesheet" type="text/css">
   <div class="panel panel-success">
     <div class="panel-heading"><h3 class="text-center">Photo Prints</h3></div>
          <div class="panel-body text-center">
@@ -112,11 +112,11 @@ We offer an array of printing services including digital, large-format, art repr
   </div>
             <!-- /Pricing -->
 
-<div class="form-and-links-container col-sm-8">
+<div class="form-and-links-container col-sm-6">
                         <!-- Subscription form -->
                         <div class="row">
                             <form class="subscription-form" id="subscription-form" novalidate>
-                                <div class="input-group col-xs-12 col-xs-offset-1 col-sm-12 col-sm-offset-0">
+                                <div class="input-group col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
                                     <p>
                                       <input name="email" type="email" class="subscription-form-email form-control" id="subscription-form-email" form="subscription-form" placeholder="Enter email to sign up for news">
                                       <span class="input-group-btn">
