--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -100,7 +100,7 @@ We offer an array of printing services including digital, large-format, art repr
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> <span style="font-size: xx-large"></span><span style="font-size: 20px"></span><span style="font-size: 20%"></span>8x10, 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40,</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Framing Available</li>
-						</ul>
+		</ul>
     <div class="panel-footer">
 		<a class="btn btn-lg btn-block btn-danger" href="http://www.artizenfinearts.com">starting at $9.99!</a>
 	</div>
@@ -112,7 +112,7 @@ We offer an array of printing services including digital, large-format, art repr
   </div>
             <!-- /Pricing -->
 
-<div class="form-and-links-container col-sm-6">
+<div class="form-and-links-container">
                         <!-- Subscription form -->
                         <div class="row">
                             <form class="subscription-form" id="subscription-form" novalidate>
