--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -73,7 +73,7 @@ We offer an array of printing services including digital, large-format, art repr
  </div>
 
   </div>
-   <div class="col-md-4" href="styles.css" rel="stylesheet" type="text/css">
+   <div class="col-md-4">
   <div class="panel panel-info">
      <div class="panel-heading"><h3 class="text-center">Standard Canvas Prints</h3></div>
          <div class="panel-body text-center">
@@ -90,7 +90,7 @@ We offer an array of printing services including digital, large-format, art repr
  </div>
 
   </div>
-   <div class="col-md-4" href="styles.css" rel="stylesheet" type="text/css">
+   <div class="col-md-4">
   <div class="panel panel-success">
     <div class="panel-heading"><h3 class="text-center">Photo Prints</h3></div>
          <div class="panel-body text-center">
@@ -98,7 +98,7 @@ We offer an array of printing services including digital, large-format, art repr
 		</div>
                        <ul class="list-group list-group-flush text-center">
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
-							<li class="list-group-item"><i class="icon-ok text-danger"></i> <span style="font-size: xx-large"></span><span style="font-size: 20px"></span><span style="font-size: 20%"></span>8x10, 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40,</li>
+							<li class="list-group-item"><i class="icon-ok text-danger"></i> 8x10, 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40,</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Framing Available</li>
 		</ul>
     <div class="panel-footer">
