--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -111,6 +111,12 @@ We offer an array of printing services including digital, large-format, art repr
    </div>
   </div>
             <!-- /Pricing -->
+            <form action="mailto:ddaniels@artizenstudios.com" method="post" class="input-lg">
+              <p>
+                <input type="email" name="email" placeholder="Email address" required />
+    <span id="passwordMeter"></span>
+              </p>
+            </form>
 
                     </div>
                 </div>
