--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -66,7 +66,7 @@ We offer an array of printing services including digital, large-format, art repr
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40, 36x48</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Gallery Wraps Available</li>
-						</ul>
+		</ul>
     <div class="panel-footer">
 		<a class="btn btn-lg btn-block btn-danger" href="http://www.artizenfinearts.com">starting at $34.99!</a>
 	</div>
@@ -83,7 +83,7 @@ We offer an array of printing services including digital, large-format, art repr
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Standard Sizes :</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> 11x14, 16x20, 18x24, 20x30, 24x30, 24x36, 30x40, 36x48</li>
 							<li class="list-group-item"><i class="icon-ok text-danger"></i> Stretching Available</li>
-						</ul>
+		</ul>
     <div class="panel-footer">
 		<a class="btn btn-lg btn-block btn-danger" href="http://www.artizenfinearts.com">starting at $29.99!</a>
 	</div>
@@ -105,24 +105,9 @@ We offer an array of printing services including digital, large-format, art repr
 		<a class="btn btn-lg btn-block btn-danger" href="http://www.artizenfinearts.com">starting at $9.99!</a>
 	</div>
  </div>
- 
-
-    </div>
-   </div>
-  </div>
-            <!-- /Pricing -->
-            <form action="mailto:ddaniels@artizenstudios.com" method="post" class="input-lg">
-              <p>
-                <input type="email" name="email" placeholder="Email address" required />
-    <span id="passwordMeter"></span>
-              </p>
-            </form>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /Main content -->
+</div>
+   <div class="table"><form><input type="email"><input type="submit"></form></div>
+<!-- /Main content -->
 
         
 
