--- a/WS_marketing/index.html
+++ b/WS_marketing/index.html
@@ -6,15 +6,14 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  		<meta name="viewport" content="width=396.00,minimum-scale=.2">
        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-       <script type="text/javascript">window.jQuery || document.write('<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/js/jquery.min.js"><\/script>')</script>
+       <script type="text/javascript" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/js/jquery.min.js"></script>
        <script type="text/javascript" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/js/vmouse.min.js"></script>
        <script type="text/javascript" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/js/jquery.anythingslider.min.js"></script>
        <script type="text/javascript" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/js/jquery.touchSwipe.min.js"></script>
        <script type="text/javascript" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/js/in5.config.js"></script>
-       <link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/in5.slider.css">
-       <link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/pages.css">
+       <link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/css/in5.slider.css">
+       <link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets//css/pages.css">
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
 		<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/js/jquery.min.js"></script>
 		<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/js/skel.min.js"></script>
@@ -27,10 +26,10 @@
 		</noscript>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/ie8.css" /><![endif]-->
         </head>
-        <body class="homepage">
+        <body class="homepage" style="zoom: 1; font-size: 15pt;">
 
 		<!-- Wrapper-->
-			<div id="wrapper">
+			<div id="wrapper" style="opacity: 1;">
 				
 				<!-- Nav -->
 					<nav id="nav">
@@ -70,7 +69,7 @@
       <div id="container">
       <ul class="pages" id="slider">
         <li class="page" data-name="1">
-          <div class="pageResizer" style="width:800px;height:1236px;"></div>
+          <div class="pageResizer" style="width:396px;height:612px;"></div>
           <img class="pageItem" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/images/item_1633.png" alt="Rectangle" style="width:412px !important;left:-5px;top:33px;"/>
           <img class="pageItem" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/images/item_1641.png" alt="Polygon" style="width:406px !important;left:-5px;top:109px;"/>
           <img class="pageItem" src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/wine_demo/html5_output/assets/images/item_1649.png" alt="TextFrame" style="width:396px !important;left:-1px;top:-12px;"/>
