--- a/html5up-astral/index.html
+++ b/html5up-astral/index.html
@@ -11,14 +11,14 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/js/jquery.min.js"></script>
+		<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/js/skel.min.js"></script>
+		<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/js/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-			<link rel="stylesheet" href="css/noscript.css" />
+			<link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/skel-noscript.css" />
+			<link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/style.css" />
+			<link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/style-desktop.css" />
+			<link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/noscript.css" />
 		</noscript>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
 	</head>
@@ -61,62 +61,7 @@
 									luctus elit eget interdum.
 								</p>
 								<section class="is-gallery">
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/knob/3495684098026313" class="image image-full"><img src="images/1.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/contact-login-form/8829734266026310" class="image image-full"><img src="images/2.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/wallpaper-pack/3755398966026313" class="image image-full"><img src="images/3.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/44-shades-of-free-icons/8268508056006318" class="image image-full"><img src="images/4.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/flip-clock/3655053956026317" class="image image-full"><img src="images/5.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/dropdown/5290304620795313" class="image image-full"><img src="images/6.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/pie-charts/1759361594616314" class="image image-full"><img src="images/7.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/sliding-selector-bar/7042935581006315" class="image image-full"><img src="images/8.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/dark-as-hell-ui/5418809286006313" class="image image-full"><img src="images/9.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/cityscape/9803996277226316" class="image image-full"><img src="images/10.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/dropdown/8259263378026313" class="image image-full"><img src="images/11.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/wood-ui-kit/3574765984616310" class="image image-full"><img src="images/12.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/upload-button/9737964647895311" class="image image-full"><img src="images/13.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/collapsible-menunavigation/5743165610406316" class="image image-full"><img src="images/14.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/3d-button/5506786525606318" class="image image-full"><img src="images/15.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
+						
 							</article>
 
 						<!-- Email -->
