--- a/WS_marketing/index.html
+++ b/WS_marketing/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Astral 2.5 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Astral by HTML5 UP</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
+<head>
+		<title>demo2</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
 		<script src="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/js/jquery.min.js"></script>
@@ -20,9 +15,8 @@
 			<link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/style-desktop.css" />
 			<link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/noscript.css" />
 		</noscript>
-        		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="http://dl.dropboxusercontent.com/u/83228040/stella_lab/WS_marketing/css/ie8.css" /><![endif]-->
         </head>
-        <body class="homepage" style="zoom: 1; font-size: 15pt;">
+        <body class="homepage">
 
 		<!-- Wrapper-->
 			<div id="wrapper">
@@ -367,8 +361,9 @@
 							<li>PutSomethingHere : <a href="http:wineshopathome.com">WS</a></li>
 						</ul>
 					</div>
-		
-			</div>
+                    </div>
+                    </div>
+                    </div>
 
 	</body>
 </html>
