--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -11,31 +11,17 @@
         <!-- Favicon -->
         <link href="favicon.ico" rel="shortcut icon">
 
-        <!-- Custom fonts -->
-        <script type="text/javascript" src="//use.typekit.net/wph4bsa.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <link href="http://fonts.googleapis.com/css?family=Roboto:300,100" rel="stylesheet">
-        <link href="social-font.css" rel="stylesheet">
+       
 
         <!-- Bootstrap stylesheets -->
         <link href="bootstrap.min.css" rel="stylesheet">
 
         <!-- Template stylesheets -->
-        <link href="shader.css" rel="stylesheet" type="text/css">
-        <link href="form_styles.css" rel="stylesheet" type="text/css" media="screen">
-    <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/poiret-one:n4:default.js" type="text/javascript"></script>
+        
 </head>
 
-    <body class="theme-fire">
-        <!-- Background container -->
-        <div id="background-container" class="background-container">
-            <div id="background-output" class="background-output"></div>
-            <div id="vignette" class="background-vignette"></div>
-            <div id="noise" class="background-noise"></div>
-        </div>
-        <!-- /Background container -->
-
-        <!-- Main content -->
+    <body>
+       <!-- Main content -->
         <div class="content">
             <div class="container">
                 <!-- Header -->
@@ -118,6 +104,9 @@ We offer an array of printing services including digital, large-format, art repr
 	</div>
  </div>
 </div>
+</div>
+</div>
+</
 
 <!-- /Main content -->
 
@@ -131,5 +120,5 @@ We offer an array of printing services including digital, large-format, art repr
         <script src="main.config.js"></script>
         <script src="shader.js"></script>
         <script src="scripts.js"></script>
-    </body>
+</body>
 </html>
