--- a/Shop_demo/index.html
+++ b/Shop_demo/index.html
@@ -42,8 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
-            </div>
+                <a class="navbar-brand" href="index.html">Artizen Digital</a></div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
